b2c/sfsc/src/objects/OrderFieldMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This Custom Setting holds field mapping between Salesforce Commerce Cloud Order Object and Service Cloud Order Object. This mapping is used in Rest Apex wrapper class to create order header in Salesforce.</description>
    <fields>
        <fullName>CC_Attribute__c</fullName>
        <description>This field holds CC Attribute Name</description>
        <inlineHelpText>This field holds CC Attribute Name</inlineHelpText>
        <label>CC Attribute</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Patch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting check if this attribute will be patched in commerce cloud from CRM or not</description>
        <inlineHelpText>This setting check if this attribute will be patched in commerce cloud from CRM or not</inlineHelpText>
        <label>Enable Patch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting check if this attribute will be synchronised from commerce cloud or not</description>
        <inlineHelpText>This setting check if this attribute will be synchronised from commerce cloud or not</inlineHelpText>
        <label>Enable Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Api_Name__c</fullName>
        <description>This field holds service cloud field api name which is mapped to commerce cloud attributes.</description>
        <inlineHelpText>This field holds service cloud field api name which is mapped to commerce cloud attributes.</inlineHelpText>
        <label>Field Api Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>OrderFieldMapping</label>
</CustomObject>